<resources>
    <string name="app_name">QMBForm</string>
    <string name="title_no_entries">No entries</string>
    <string name="msg_no_entries">No entries are made</string>
    <string name="validation_is_required">is required</string>
    <string name="validation_invalid_email">is not a valid email</string>
    <string name="msg_check_form">Please check your entries</string>
    <string name="msg_x_is_required">is a required field</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="done_button_text">Done</string>
    <string name="height_picker_dialog_title">Select your height</string>
    <string name="feet_label">feet</string>
    <string name="inches_label">inches</string>
    <string name="cm_label">cm</string>
    <string name="test_error" />
    <string name="nonpositive_number_error">must be greater than zero</string>
    <string name="signature_title">Enter Signature</string>
    <string name="name_entry_hint">Enter your name...</string>
    <string name="date_entry_hint">Enter the date...</string>
    <string name="agreement">I agree to the terms and conditions.</string>
    <string name="clear_pad">Clear</string>
    <string name="save_signature">Save</string>
    <string name="signature_name_required">Name Required</string>
    <string name="signature_name_required_message">Please enter your name under the signature, or clear the signature.</string>
    <string name="abc_camera_crosshair">crosshair for camera barcode scanning</string>
    <string name="abc_torch_image">image for the torch control</string>
    <string name="title_activity_location_picker">Location</string>
    <string name="service_not_available">Geocoding Service Is Not Available</string>
    <string name="invalid_lat_long_used">Provided Lattitude Or Longitude Is Invalid</string>
    <string name="address_found">Address Was Found</string>
    <string name="no_address_found">No Address Was Found Associated With Supplied Coordinates</string>
</resources>
